# Postgres_Homeworks_2023

./: .gitignore  pyproject.toml
homework-1/: create_tables.sql  main.py
homework-2/: groupby.sql  simple_queries.sql
homework-3/: queries.sql
homework-4/: alter_northwind.sql  alter_student.sql
homework-5/: database.ini  main.py
